--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,3 +19,10 @@ body{
   color: aquamarine;
   text-align: center;
 }
+
+a {
+  font-size: 16px;
+  font-weight: normal;
+  color: aquamarine;
+  text-align: center;
+}
