--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,13 @@ body{
   text-align: center;
 }
 
+h1{
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
 .topline {
   font-size: 50px;
   font-weight: normal;
